--- a/05Interaction/index.html
+++ b/05Interaction/index.html
@@ -25,6 +25,12 @@
         depth="1" 
         material="src: #wood"
         shadow 
+        animation__2="property: position;
+                      to: -1 3 -6;
+                      startEvents: mouseenter;
+                      dur: 3000;
+                      easing: linear;
+                      loop: true"
         animation__mouseenter="
           property: components.material.material.color; 
           type: color; 
@@ -34,7 +40,7 @@
         animation__mouseleave="
           property: components.material.material.color; 
           type: color; 
-          to: red; 
+          to: pink; 
           startEvents: mouseleave; 
           dur: 500;">  
       </a-box>
