--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -13,12 +13,12 @@
         width="2"
         height="1"
         depth="2"
-        color="yellow" 
+        color="pink" 
         position="0 2 -10"
         shadow>
       </a-box>
         
-        <a-circle id="myCircle" color="cornflowerblue" radius="0.5" position="0 0 0" rotation="-90 0 0">
+        <a-circle id="myCircle" color="cornflowerblue" radius="0.5" position="0 2 0" rotation="-90 0 0">
       </a-circle>
         
        <a-ring color="teal" radius-inner="1" radius-outer="2" position="0 2 -3"></a-ring>
