--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -18,7 +18,9 @@
         position="0 2 -10"
         shadow>
       </a-box>
-        <a-dodecahedron color="grey" position="0 2 -8"></a-dodecahedron>
+        
+        <a-dodecahedron color="grey" position="0 0 -8"></a-dodecahedron>
+        <a-octahedron color="purple" positoion="0 0 -10"></a-octahedron>
        <a-ring color="teal" radius-inner="1" radius-outer="2" position="0 2 -3"></a-ring>
         <a-cone color="tomato" radius-bottom="2" radius-top="0.2" position="0 3 -6"></a-cone>
         <a-cylinder color="yellow" theta-start="50" theta-length="280" side="double" position="0 0 -7"></a-cylinder>
