--- a/02Shape/index.html
+++ b/02Shape/index.html
@@ -20,8 +20,8 @@
       </a-box>
         
         <a-dodecahedron color="grey" position="0 1 -8"></a-dodecahedron>
-        <a-octahedron color="purple" positoion="0 0 -10"></a-octahedron>
-        <a-torus-knot color="black" position="1 1 -12"></a-torus-knot>
+        <a-octahedron color="#236" positoion="0 0 -10"></a-octahedron>
+        <a-torus-knot color="black" position="3 1 -5"></a-torus-knot>
        <a-ring color="teal" radius-inner="1" radius-outer="2" position="0 2 -3"></a-ring>
         <a-cone color="tomato" radius-bottom="2" radius-top="0.2" position="0 3 -6"></a-cone>
         <a-cylinder color="yellow" theta-start="50" theta-length="280" side="double" position="0 0 -7"></a-cylinder>
